--- a/featured-apps.json
+++ b/featured-apps.json
@@ -1,19 +1,19 @@
 [
     {
-        "name": "homeassistant",
-        "editor": "CasaOS Team",
+        "name": "vionetagro",
+        "editor": "Vioneta Team",
         "date": "1640829941",
         "reason": "Everyone's love"
     },
     {
         "name": "jellyfin",
-        "editor": "CasaOS Team",
+        "editor": "Vioneta Team",
         "date": "1640830518",
         "reason": "Open source and free, that's the spirit!"
     },
     {
         "name": "nextcloud",
-        "editor": "CasaOS Team",
+        "editor": "Vioneta Team",
         "date": "1640830720",
         "reason": "Public Cloud Walk Away~"
     }
