--- a/Apps/VioinetaAgro/docker-compose.yml
+++ b/Apps/VioinetaAgro/docker-compose.yml
@@ -47,7 +47,7 @@ x-casaos:
   description:
     en_us: Smart precision agriculture platform that put local controll and dataprivacy at first
   developer: Vioneta Agro
-  icon: https://cdn.jsdelivr.net/gh/IceWhaleTech/CasaOS-AppStore@main/Apps/HomeAssistant/icon.png
+  icon: ./icon.png
   screenshot_link:
     - https://cdn.jsdelivr.net/gh/IceWhaleTech/CasaOS-AppStore@main/Apps/HomeAssistant/screenshot-1.jpg
     - https://cdn.jsdelivr.net/gh/IceWhaleTech/CasaOS-AppStore@main/Apps/HomeAssistant/screenshot-2.jpg
