--- a/Apps/VioinetaAgro/appfile.json
+++ b/Apps/VioinetaAgro/appfile.json
@@ -3,7 +3,7 @@
     "title": "Vioneta Agro",
     "name": "vionetagro",
     "icon": "https://www.vioneta.com/images/logo.png",
-    "tagline": "Awaken your home",
+    "tagline": "Smart Agriculture Platform",
     "overview": "Smart precision agriculture platform that put local controll and dataprivacy at first",
     "thumbnail": "https://cdn.jsdelivr.net/gh/IceWhaleTech/CasaOS-AppStore@main/Apps/HomeAssistant/thumbnail.png",
     "screenshots": [
