--- a/Apps/VAgro/docker-compose.yml
+++ b/Apps/VAgro/docker-compose.yml
@@ -21,21 +21,17 @@ services:
         - container: TZ
           description:
             en_us: TimeZone
-            zh_cn: 时区
         - container: PUID
           description:
             en_us: Run Vionet Agro as specified uid.
-            zh_cn: 以指定的uid运行Vionet Agro
         - container: PGID
           description:
             en_us: Run Vionet Agro as specified gid.
-            zh_cn: 以指定的gid运行Vionet Agro
 
       volumes:
         - container: /config
           description:
             en_us: Vioneta Agro config directory.
-            zh_cn: Vioneta Agro配置目录
     container_name: vionetagro
 x-casaos:
   architectures:
@@ -54,7 +50,7 @@ x-casaos:
     - https://cdn.jsdelivr.net/gh/IceWhaleTech/CasaOS-AppStore@main/Apps/HomeAssistant/screenshot-3.jpg
     - https://cdn.jsdelivr.net/gh/IceWhaleTech/CasaOS-AppStore@main/Apps/HomeAssistant/screenshot-4.jpg
   tagline:
-    en_us: Awaken your home
+    en_us: Smart Agriculture Platform
   thumbnail: https://raw.githubusercontent.com/Vioneta/Vioneta-Appstore/main/Apps/VioinetaAgro/thumbnail.png
   tips: {}
   title:
