--- a/Apps/VInsight/appfile.json
+++ b/Apps/VInsight/appfile.json
@@ -12,7 +12,7 @@
 		"https://cdn.jsdelivr.net/gh/IceWhaleTech/CasaOS-AppStore@main/Apps/Grafana/screenshot-3.png"
 	],
 	"category": [
-		"Network"
+		"Analytics"
 	],
 	"developer": {
 		"name": "grafana",
