--- a/featured-apps.json
+++ b/featured-apps.json
@@ -6,7 +6,7 @@
         "reason": "Revolution in Agriculture"
     },
     {
-        "name": "grafana",
+        "name": "vinsight",
         "editor": "Vioneta Team",
         "date": "1640830720",
         "reason": "Advanced analytics made easy"
