--- a/Apps/VInsight/appfile.json
+++ b/Apps/VInsight/appfile.json
@@ -5,11 +5,12 @@
 	"icon": "https://raw.githubusercontent.com/Vioneta/Vioneta-Appstore/main/Apps/VInsight/icon.png",
 	"tagline": "VInsight is a complete observability stack that allows you to monitor and analyze metrics, logs and traces. It allows you to query, visualize, alert on and understand your data no matter where it is stored. ",
 	"overview": "VInsight open source is open source visualization and analytics software.Visualizations: Fast and flexible client side graphs with a multitude of options. Panel plugins offer many different ways to visualize metrics and logs. Dynamic Dashboards: Create dynamic & reusable dashboards with template variables that appear as dropdowns at the top of the dashboard. Explore Metrics: Explore your data through ad-hoc queries and dynamic drilldown. Split view and compare different time ranges, queries and data sources side by side. Explore Logs: Experience the magic of switching from metrics to logs with preserved label filters. Quickly search through all your logs or streaming them live. Alerting: Visually define alert rules for your most important metrics. Grafana will continuously evaluate and send notifications to systems like Slack, PagerDuty, VictorOps, OpsGenie. Mixed Data Sources: Mix different data sources in the same graph! You can specify a data source on a per-query basis. This works for even custom datasources.",
-	"thumbnail": "https://cdn.jsdelivr.net/gh/IceWhaleTech/CasaOS-AppStore@main/Apps/Grafana/thumbnail.png",
+	"thumbnail": "https://raw.githubusercontent.com/Vioneta/Vioneta-Appstore/main/Apps/VInsight/thumbnail.png",
 	"screenshots": [
-		"https://cdn.jsdelivr.net/gh/IceWhaleTech/CasaOS-AppStore@main/Apps/Grafana/screenshot-1.png",
-		"https://cdn.jsdelivr.net/gh/IceWhaleTech/CasaOS-AppStore@main/Apps/Grafana/screenshot-2.png",
-		"https://cdn.jsdelivr.net/gh/IceWhaleTech/CasaOS-AppStore@main/Apps/Grafana/screenshot-3.png"
+		"https://raw.githubusercontent.com/Vioneta/Vioneta-Appstore/main/Apps/VInsight/screenshot-1.png",
+		"https://raw.githubusercontent.com/Vioneta/Vioneta-Appstore/main/Apps/VInsight/screenshot-2.png",
+		"https://raw.githubusercontent.com/Vioneta/Vioneta-Appstore/main/Apps/VInsight/screenshot-3.png",
+		"https://raw.githubusercontent.com/Vioneta/Vioneta-Appstore/main/Apps/VInsight/screenshot-4.png"
 	],
 	"category": [
 		"Analytics"
