--- a/Apps/VCam/docker-compose.yml
+++ b/Apps/VCam/docker-compose.yml
@@ -75,7 +75,7 @@ services:
 #        target: /tmp/cache
 #        tmpfs:
 #          size: 1G
-    x-casaos:
+    x-vionetaos:
       ports:
         - container: "5000"
           description:
@@ -93,7 +93,7 @@ services:
         - container: /media/frigate
           description:
             en_us: Contains database and all media files.
-x-casaos:
+x-vionetaos:
   architectures:
     - amd64
     - arm64
