--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,12 +23,12 @@ jobs:
         id: build
         run: |
           rm -rf /tmp/build
-          mkdir -p /tmp/build/sysroot/var/lib/casaos/appstore/default.new
+          mkdir -p /tmp/build/sysroot/var/lib/vionetaos/appstore/default.new
           cp -rv build/* /tmp/build/
-          cp -rv Apps /tmp/build/sysroot/var/lib/casaos/appstore/default.new/
-          cp -v category-list.json /tmp/build/sysroot/var/lib/casaos/appstore/default.new/
-          cp -v recommend-list.json /tmp/build/sysroot/var/lib/casaos/appstore/default.new/
-          cp -v README.md /tmp/build/sysroot/var/lib/casaos/appstore/default.new/
+          cp -rv Apps /tmp/build/sysroot/var/lib/vionetaos/appstore/default.new/
+          cp -v category-list.json /tmp/build/sysroot/var/lib/vionetaos/appstore/default.new/
+          cp -v recommend-list.json /tmp/build/sysroot/var/lib/vionetaos/appstore/default.new/
+          cp -v README.md /tmp/build/sysroot/var/lib/vionetaos/appstore/default.new/
           pushd /tmp
           tar zcvf linux-all-appstore-${{ github.ref_name }}.tar.gz build
       
@@ -51,7 +51,7 @@ jobs:
           key-id: ${{ secrets.OSS_KEY_ID }}
           key-secret: ${{ secrets.OSS_KEY_SECRET }}
           region: oss-cn-shanghai
-          bucket: casaos
+          bucket: vionetaos
           assets: |
             /tmp/checksums.txt:/IceWhaleTech/CasaOS-AppStore/releases/download/${{ steps.get_version.outputs.VERSION }}/checksums.txt
             /tmp/linux-all-appstore-${{ github.ref_name }}.tar.gz:/IceWhaleTech/CasaOS-AppStore/releases/download/${{ steps.get_version.outputs.VERSION }}/linux-all-appstore-${{ github.ref_name }}.tar.gz
