--- a/.github/workflows/release_zip.yml
+++ b/.github/workflows/release_zip.yml
@@ -23,12 +23,12 @@ jobs:
         id: build
         run: |
           rm -rf /tmp/build
-          mkdir -p /tmp/build/sysroot/var/lib/casaos/appstore/default.new
+          mkdir -p /tmp/build/sysroot/var/lib/vionetaos/appstore/default.new
           cp -rv build/* /tmp/build/
-          cp -rv Apps /tmp/build/sysroot/var/lib/casaos/appstore/default.new/
-          cp -v category-list.json /tmp/build/sysroot/var/lib/casaos/appstore/default.new/
-          cp -v recommend-list.json /tmp/build/sysroot/var/lib/casaos/appstore/default.new/
-          cp -v README.md /tmp/build/sysroot/var/lib/casaos/appstore/default.new/
+          cp -rv Apps /tmp/build/sysroot/var/lib/vionetaos/appstore/default.new/
+          cp -v category-list.json /tmp/build/sysroot/var/lib/vionetaos/appstore/default.new/
+          cp -v recommend-list.json /tmp/build/sysroot/var/lib/vionetaos/appstore/default.new/
+          cp -v README.md /tmp/build/sysroot/var/lib/vionetaos/appstore/default.new/
           pushd /tmp
           zip -r main.zip build
             
@@ -51,7 +51,7 @@ jobs:
           destination-github-username: 'IceWhaleTech'
           destination-repository-name: 'CasaOS-AppStore'
           target-branch: 'gh-pages'
-          user-email: wiki@casaos.io
+          user-email: wiki@vionetaos.io
           target-directory: ''
 
       - name: Upload to oss
@@ -61,6 +61,6 @@ jobs:
           key-id: ${{ secrets.OSS_KEY_ID }}
           key-secret: ${{ secrets.OSS_KEY_SECRET }}
           region: oss-cn-shanghai
-          bucket: casaos
+          bucket: vionetaos
           assets: |
             /tmp/main.zip:/store/main.zip
