--- a/Apps/VInsight/docker-compose.yml
+++ b/Apps/VInsight/docker-compose.yml
@@ -27,6 +27,11 @@ services:
         published: "3003"
         protocol: tcp
     restart: always
+    depends_on:
+      - redis
+      - pgdb
+    volumes:
+      - /DATA/AppData/$AppID/config:/var/lib/superset
 
 x-vionetaos:
   architectures:
