--- a/Apps/VInsight/docker-compose.yml
+++ b/Apps/VInsight/docker-compose.yml
@@ -1,24 +1,5 @@
 name: vinsight
 services:
-  vinsight:
-    image: vioneta/vinsight:latest
-    deploy:
-      resources:
-        reservations:
-          memory: 256M
-    network_mode: bridge
-    ports:
-      - target: 8088
-        published: "3003"
-        protocol: tcp
-    restart: always
-    depends_on:
-      - redis
-      - pgdb
-    volumes:
-      - /DATA/AppData/$AppID/config:/var/lib/superset
-    networks:
-      - vinsight
   pgdb:
     image: postgres
     restart: always
@@ -35,6 +16,27 @@ services:
     restart: always
     volumes:
       - /DATA/AppData/$AppID/cache/database:/data
+    networks:
+      - vinsight
+
+  vinsight:
+    container_name: vcam
+    image: vioneta/vinsight:latest
+    deploy:
+      resources:
+        reservations:
+          memory: 256M
+    network_mode: bridge
+    ports:
+      - target: 8088
+        published: "3003"
+        protocol: tcp
+    restart: always
+    depends_on:
+      - redis
+      - pgdb
+    volumes:
+      - /DATA/AppData/$AppID/config:/var/lib/superset
     networks:
       - vinsight
 networks:
