--- a/Apps/VAssist/docker-compose.yml
+++ b/Apps/VAssist/docker-compose.yml
@@ -1,24 +1,16 @@
 name: VAssist
 services:
   vassist:
-    # Name of the container
     container_name: vassist
-    # Image to be used for the container
     image: vioneta/ollama:r35.5.0
-    # Container restart policy
     restart: unless-stopped
-    # Volumes to be mounted to the container
     volumes:
       - /DATA/AppData/$AppID/.ollama:/root/.ollama
       - /etc/localtime:/etc/localtime:ro
       - /etc/timezone:/etc/timezone:ro
-    # Ports mapping between host and container
     ports:
-      # Mapping port 11434 of the host to port 11434 of the container
       - "11434:11434"
-    # Define the deployment settings
     deploy:
-      # Specify resource reservations
       resources:
         reservations:
           devices:
@@ -29,7 +21,7 @@ services:
               capabilities:
                 # Define the required capabilities (gpu for GPU resources)
                 - gpu
-    x-casaos: # CasaOS specific configuration
+    x-vionetaos: # CasaOS specific configuration
       volumes:
         - container: /root/.ollama
           description:
@@ -71,7 +63,7 @@ services:
               capabilities:
                 # Define the required capabilities (gpu for GPU resources)
                 - gpu
-    x-casaos: # CasaOS specific configuration
+    x-vionetaos: # CasaOS specific configuration
       volumes:
         - container: /share/openwakeword
           description:
