add keyword node red

--- a/Apps/Anaconda3/docker-compose.yml
+++ b/Apps/Anaconda3/docker-compose.yml
@@ -8,8 +8,8 @@ services:
     environment:
       - JUPYTER_ROOT=/
       - JUPYTER_PORT=8888
-      - JUPYTER_PASSWORD=password
-      - JUPYTER_LOGS=/dev/null
+      # - JUPYTER_PASSWORD=password
+      - JUPYTER_LOGS=/data/logs/jupyter.log
     ports:
       - target: 8888
         published: "8888"
