--- a/Apps/VAssist/docker-compose.yml
+++ b/Apps/VAssist/docker-compose.yml
@@ -1,4 +1,4 @@
-name: VAssist
+name: vassist
 services:
   vassist:
     container_name: vassist
@@ -6,8 +6,6 @@ services:
     restart: unless-stopped
     volumes:
       - /DATA/AppData/$AppID/.ollama:/root/.ollama
-      - /etc/localtime:/etc/localtime:ro
-      - /etc/timezone:/etc/timezone:ro
     ports:
       - "11434:11434"
     deploy:
@@ -44,8 +42,6 @@ services:
     # Volumes to be mounted to the container
     volumes:
       - /DATA/AppData/$AppID/openwakeword:/share/openwakeword
-      - /etc/localtime:/etc/localtime:ro
-      - /etc/timezone:/etc/timezone:ro
     # Ports mapping between host and container
     ports:
       # Mapping port 11434 of the host to port 11434 of the container
@@ -86,8 +82,6 @@ services:
     volumes:
       - /DATA/AppData/$AppID/wyoming-whisper:/share/whisper
       - /DATA/AppData/$AppID/wyoming-whisper/data:/data
-      - /etc/localtime:/etc/localtime:ro
-      - /etc/timezone:/etc/timezone:ro
     ports:
       - "10300:10300"
     x-vionetaos:
@@ -149,8 +143,6 @@ services:
       PIPER_PROCS: ""
     volumes:
       - /DATA/AppData/$AppID/wyoming-piper:/data/models/piper
-      - /etc/localtime:/etc/localtime:ro
-      - /etc/timezone:/etc/timezone:ro
     ports:
       # Mapping port 11434 of the host to port 11434 of the container
       - "10200:10200"
@@ -205,7 +197,6 @@ services:
                 - gpu
 x-vionetaos:
   architectures:
-    - amd64
     - arm64
   main: vassist
   description:
